Touched up commit after speaking to my mentor. Made all cards on homepage standard height. Took away unneeded h-sizing on font awesome logos and replaced with FA size classes. Made modal bigger on the two blog pages and added spacing between list items. On the contact page the image has been resized and recentered. Also on contact dropped the brightness of the background jumbotron to be more visually appealing. Changed text size across pages to also be more visually appealing for the user. Replaced the us of Bootstrap's card as the format for my content to a more appropriate column and row format.

--- a/automation.html
+++ b/automation.html
@@ -34,7 +34,7 @@
 			<div class="collapse navbar-collapse" id="collapse_target">
 				<div class="navbar-logo">
 					<a class="navbar-brand" href="index.html">
-					    <h1><i class="fa fa-globe" aria-hidden="true"></i></h1>
+					    <i class="fa fa-globe fa-2x" aria-hidden="true"></i>
 					</a>
 					<h2><span class="collapse navbar-text">Universal Relations Media</span></h2>
 				</div>
@@ -63,14 +63,15 @@
 
 <!-- Content -->
 		<div class="container-fluid">
-			<div class="card-auto my-auto">
-				<img class="card-img-top-blog img-fluid" src="assets/images/robot.jpg" alt="Image with a illustrated brain split in two halves. The left half is cybernetic and the right half is organic" />
-				<div class="card-body">
-					<h1 class="card-title text-center"><u>Automation, Gender and Securitization</u></h1>
+			<div class="row blog-auto my-auto">
+				<img class="col-12 img-fluid" src="assets/images/robot.jpg" alt="Image with a illustrated brain split in two halves. The left half is cybernetic and the right half is organic" />
+				<br>
+                <div class="col-12">
+					<h1 class="text-center"><u>Automation, Gender and Securitization</u></h1>
 					<br>
 					<h3 class="text-center">To what extent is the state the main focus of security policies?</h3>
 					<br>
-					<p class="card-text">
+					<p>
 						In this question, we consider the extent that the state is focused upon through security
 						policies. In the contemporary age of globalisation - an increase in capabilities that concur
 						with technological development abetting the movement of people and goods and services, entwined
@@ -353,7 +354,7 @@
 
 		<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog"
 			aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-			<div class="modal-dialog" role="document">
+			<div class="modal-dialog modal-lg" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
 						<h5 class="modal-title" id="exampleModalLongTitle">Sources and References</h5>
@@ -654,10 +655,10 @@
 			<footer class="mx-auto my auto text-center">
 				<div class="row footer-style">
 					<div class="footer-logo col-lg-4 d-none d-lg-block">
-						<h5><a href="index.html">
-								<i class="fa fa-globe" aria-hidden="true"></i>
+						<a href="index.html">
+								<i class="fa fa-globe fa-lg" aria-hidden="true"></i>
 							</a>
-							URM</h5>
+							<h5>URM</h5>
 					</div>
 					<div class="ftr-soc-lnk col-lg-4 col-md-6">
 						<div class="row">
