--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 			<div class="collapse navbar-collapse" id="collapse_target">
 				<div class="navbar-logo">
 					<a class="navbar-brand" href="index.html">
-						<h1><i class="fa fa-globe" aria-hidden="true"></i></h1>
+						<i class="fa fa-globe fa-2x" aria-hidden="true"></i>
 					</a>
 					<h2><span class="collapse navbar-text">Universal Relations Media</span></h2>
 				</div>
@@ -59,7 +59,7 @@
 		</div>
 	</nav>
 
-	<article class="container-fluid mt-5">
+    <article class="container-fluid mt-5">
 
 <!-- Callout -->
 
@@ -98,12 +98,19 @@
 							</tbody>
 						</table>
 					</div>
-					    <div class="col-6 d-none d-md-block my-auto mx-auto">
+					    <div class="col-6 d-none d-md-block my-auto text-center">
 						    <img class="img-fluid" src="assets/images/me.jpg" alt="The author, looking smart in a suit.">
                         </div>
 					</div>
 				</div>
 			</div>
+            <div class="row">
+                <div class="col-12">
+                    <p class="contact-disclaimer text-center">
+                    <strong>Please note. The author may take up to 24hrs to respond. Thanks in advance.</strong>
+                    </p>
+                </div>
+            </div>    
 	</article>
 
 	<br>
