--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<div class="collapse navbar-collapse" id="collapse_target">
 				<div class="navbar-logo">
 					<a class="navbar-brand" href="index.html">
-						<h1><i class="fa fa-globe" aria-hidden="true"></i></h1>
+						<i class="fa fa-globe fa-2x" aria-hidden="true"></i>
 					</a>
 					<h2><span class="collapse navbar-text">Universal Relations Media</span></h2>
 				</div>
