--- a/globalisation.html
+++ b/globalisation.html
@@ -34,7 +34,7 @@
 			<div class="collapse navbar-collapse" id="collapse_target">
 				<div class="navbar-logo">
 					<a class="navbar-brand" href="index.html">
-						<h1><i class="fa fa-globe" aria-hidden="true"></i></h1>
+						<i class="fa fa-globe fa-2x" aria-hidden="true"></i>
 					</a>
 					<h2><span class="collapse navbar-text">Universal Relations Media</span></h2>
 				</div>
@@ -63,14 +63,15 @@
 
 <!-- Content -->
 		<div class="container-fluid">
-			<div class="card-auto my-auto">
-				<img class="card-img-top-blog img-fluid" src="assets/images/earth.jpg" alt="An image of the earth and it's major cities joined by lights to convey increasing globalisation." />
-				<div class="card-body">
-					<h1 class="card-title text-center"><u>Globalisation</u></h1>
+			<div class="row blog-auto my-auto">
+				<img class="col-12 img-fluid" src="assets/images/earth.jpg" alt="An image of the earth and it's major cities joined by lights to convey increasing globalisation." />
+				<br>
+                <div class="col-12">
+					<h1 class="text-center"><u>Automation, Gender and Securitization</u></h1>
 					<br>
-					<h3 class="text-center">How do issues become a focus of international governance?</h3>
+					<h3 class="text-center">To what extent is the state the main focus of security policies?</h3>
 					<br>
-					<p class="card-text">
+					<p>
 						This essay will focus on ‘Transnational antiglobalization protests’, a term coined by Kate
 						O’Neil (2004), as representing how issues can become a focus of international governance. This
 						will be analysed through two schools of thoughts in the school of international relations:
@@ -325,7 +326,7 @@
 
 		<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog"
 			aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-			<div class="modal-dialog" role="document">
+			<div class="modal-dialog modal-lg" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
 						<h5 class="modal-title" id="exampleModalLongTitle">Sources and References</h5>
