Added some spacing between the cards when vertically aligned

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			<div class="container-fluid btm-hmpg">
 				<div class="row text-center">
 					<div class="hmpg-text col-lg-4 col-md-6 col-sm-12">
-						<div class="card">
+						<div class="card h-100 mb-3">
 							<img class="card-img-top" src="assets/images/robot.jpg" alt="Image with a illustrated brain split in two halves. The left half is cybernetic and the right half is organic">
 							<div class="card-body">
 								<h2>Automation</h2>
@@ -112,8 +112,9 @@
 							<a class="btn btn-warning" href="automation.html">Read Here!</a>
 						</div>
 					</div>
+                    <br>
 					<div class="hmpg-text col-lg-4 col-md-6 col-sm-12">
-						<div class="card">
+						<div class="card h-100 mb-3">
 							<img class="card-img-top" src="assets/images/earth.jpg" alt="An image of the earth and it's major cities joined by lights to convey increasing globalisation.">
 							<div class="card-body">
 								<h2>Globalization</h2>
@@ -129,8 +130,9 @@
 							<a class="btn btn-warning" href="globalisation.html">Read Here!</a>
 						</div>
 					</div>
+                    <br>
 					<div class="hmpg-text col-lg-4 d-md-none d-lg-block col-sm-12">
-						<div class="card">
+						<div class="card h-100 mb-3">
 							<img class="card-img-top" src="assets/images/contact.jpg" alt="The author, looking smart in a suit.">
 							<div class="card-body">
 								<h2>Contact Me</h2>
