Added extra styling to images on blog post pages

--- a/automation.html
+++ b/automation.html
@@ -62,10 +62,10 @@
 	<article class="container-fluid mt-5">
 
 <!-- Content -->
-		<div class="container-fluid">
-			<div class="row blog-auto my-auto">
-				<img class="col-12 img-fluid" src="assets/images/robot.jpg" alt="Image with a illustrated brain split in two halves. The left half is cybernetic and the right half is organic" />
-				<br>
+<img class="col-12 img-fluid blog-img" src="assets/images/robot.jpg" alt="Image with a illustrated brain split in two halves. The left half is cybernetic and the right half is organic"/>
+        <div class="row container-fluid">
+            <div class="blog-auto my-auto">
+            <br>
                 <div class="col-12">
 					<h1 class="text-center"><u>Automation, Gender and Securitization</u></h1>
 					<br>
@@ -248,9 +248,9 @@
 						countries, through reports by the Mckinsey Global Institute and the World Bank (See Table 1).
 					</p>
 					<h5>Table 1</h5>
-					<br>
+                    <br>
 					<div>
-						<img src="assets/images/table1.jpg" alt="Estimates of proportion of employment that is automatable in selected countries. Has three columns, relating to country, McKinsey Global Institute data and World Bank data. Argentina: 48%/65%. China: 51%/77%. Costa Rica: 52%/68%. Ethiopia: 50%/85%. India: 52%/69%. Malaysia: 51%/68%. Nigeria: 46%/65%. South Africa: 41%/67%. Thailand: 55%/72%." class="img-fluid">
+						<img class="blog-img-int" src="assets/images/table1.jpg" alt="Estimates of proportion of employment that is automatable in selected countries. Has three columns, relating to country, McKinsey Global Institute data and World Bank data. Argentina: 48%/65%. China: 51%/77%. Costa Rica: 52%/68%. Ethiopia: 50%/85%. India: 52%/69%. Malaysia: 51%/68%. Nigeria: 46%/65%. South Africa: 41%/67%. Thailand: 55%/72%." class="img-fluid">
 						<br>
 						<br>
 						<p class="float-right">
@@ -294,7 +294,7 @@
 					<h5>Table 2</h5>
 					<br>
 					<div>
-						<img src="assets/images/table2.jpg" alt="The space of potential public policy responses to automation. Managing Structural Change/Coping: Adaptability of labor - Skills Upgrading; Employment generation - Post-industrialisation/ARS, Investment in labor-intensive sectors, public works programs. Managing Structural Change/Containment: Labor costs and regulation - Tax cuts on labor, wage subsidies, lower minimum wage; Employment protection - Job protection legislation; Automation costs and regulation - Taxes on automation, Regulation that complicates automation, Tariffs on imports of non-primary goods. Managing inclusivity/Coping: Unemployment protection - Transition support, Unemployment insurance, Universal basic income, Active labor market policies" class="img-fluid">
+						<img class="blog-img-int" src="assets/images/table2.jpg" alt="The space of potential public policy responses to automation. Managing Structural Change/Coping: Adaptability of labor - Skills Upgrading; Employment generation - Post-industrialisation/ARS, Investment in labor-intensive sectors, public works programs. Managing Structural Change/Containment: Labor costs and regulation - Tax cuts on labor, wage subsidies, lower minimum wage; Employment protection - Job protection legislation; Automation costs and regulation - Taxes on automation, Regulation that complicates automation, Tariffs on imports of non-primary goods. Managing inclusivity/Coping: Unemployment protection - Transition support, Unemployment insurance, Universal basic income, Active labor market policies" class="img-fluid">
 						<br>
 						<br>
 						<p class="float-right">
