--- a/globalisation.html
+++ b/globalisation.html
@@ -62,11 +62,11 @@
 	<article class="container-fluid mt-5">
 
 <!-- Content -->
+<img class="col-12 img-fluid blog-img" src="assets/images/earth.jpg" alt="An image of the earth and it's major cities joined by lights to convey increasing globalisation." />
 		<div class="container-fluid">
 			<div class="row blog-auto my-auto">
-				<img class="col-12 img-fluid" src="assets/images/earth.jpg" alt="An image of the earth and it's major cities joined by lights to convey increasing globalisation." />
-				<br>
-                <div class="col-12">
+            <br>
+				<div class="col-12">
 					<h1 class="text-center"><u>Automation, Gender and Securitization</u></h1>
 					<br>
 					<h3 class="text-center">To what extent is the state the main focus of security policies?</h3>
