Added more testing pics and updated fa sizing on index page

--- a/globalisation.html
+++ b/globalisation.html
@@ -67,9 +67,9 @@
 			<div class="row blog-auto my-auto">
             <br>
 				<div class="col-12">
-					<h1 class="text-center"><u>Automation, Gender and Securitization</u></h1>
+					<h1 class="text-center"><u>Globalisation</u></h1>
 					<br>
-					<h3 class="text-center">To what extent is the state the main focus of security policies?</h3>
+					<h3 class="text-center">Ho do issues become a focus of international governance?</h3>
 					<br>
 					<p>
 						This essay will focus on ‘Transnational antiglobalization protests’, a term coined by Kate
