--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		</div>
 	</nav>
 
-	<article class="container-fluid mt-5">
+<article class="container-fluid mt-5">
 
 <!-- Callout -->
 
@@ -69,15 +69,15 @@
 					<section class="text-center">
 						<div class="overlay-hmpg">
 							<div class="d-none d-lg-block">
-								<h1><i class="fa fa-globe" aria-hidden="true"></i> Universal Relations Media
-									<i class="fa fa-globe" aria-hidden="true"></i></h1>
+								<i class="fa fa-globe" aria-hidden="true"></i> <h1>Universal Relations Media</h1>
+									<i class="fa fa-globe" aria-hidden="true"></i>
 							</div>
 							<div class="d-none d-sm-block d-lg-none">
-								<h2><span><i class="fa fa-globe" aria-hidden="true"></i> URM <i class="fa fa-globe" aria-hidden="true"></i></span>
-								</h2>
+								<span><i class="fa fa-globe fa-2x" aria-hidden="true"></i> URM <i class="fa fa-globe" aria-hidden="true"></i></span>
+								
 							</div>
 							<div class="d-block d-sm-none">
-								<h2><span><i class="fa fa-globe" aria-hidden="true"></i></span></h2>
+								<span><i class="fa fa-globe fa-lg" aria-hidden="true"></i></span>
 							</div>
 							<hr>
 							<div class="d-block">
