--- a/index.html
+++ b/index.html
@@ -63,21 +63,22 @@
 
 <!-- Callout -->
 
-		<div class="container-fluid hmpg-head">
+		<div class="hmpg-head">
 			<div class="row">
 				<div class="col-12">
 					<section class="text-center">
 						<div class="overlay-hmpg">
 							<div class="d-none d-lg-block">
-								<i class="fa fa-globe" aria-hidden="true"></i> <h1>Universal Relations Media</h1>
-									<i class="fa fa-globe" aria-hidden="true"></i>
+								<i class="fa fa-globe fa-2x" aria-hidden="true"></i> 
+                                <h1>Universal Relations Media</h1>
+								<i class="fa fa-globe fa-2x" aria-hidden="true"></i>
 							</div>
 							<div class="d-none d-sm-block d-lg-none">
-								<span><i class="fa fa-globe fa-2x" aria-hidden="true"></i> URM <i class="fa fa-globe" aria-hidden="true"></i></span>
+								<span><i class="fa fa-globe fa-2x" aria-hidden="true"></i></span><h2>URM</h2>
 								
 							</div>
 							<div class="d-block d-sm-none">
-								<span><i class="fa fa-globe fa-lg" aria-hidden="true"></i></span>
+								<span><i class="fa fa-globe fa-2x" aria-hidden="true"></i></span>
 							</div>
 							<hr>
 							<div class="d-block">
