--- a/index.html
+++ b/index.html
@@ -1,201 +1,255 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Universal Relations Media</title>
+    <!-- BStrap -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"
+    ></script>
+    <!-- GFonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600;700;800&family=Roboto+Slab:wght@300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <!--FAwe-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <!-- My CSS -->
+    <link href="assets/styles.css" rel="stylesheet" type="text/css" />
+  </head>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Universal Relations Media</title>
-<!-- BStrap -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
-	</script>
-<!-- GFonts -->
-	<link
-		href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600;700;800&family=Roboto+Slab:wght@300;400;500;600;700;800&display=swap"
-		rel="stylesheet" />
-<!--FAwe-->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-<!-- My CSS -->
-	<link href="assets/styles.css" rel="stylesheet" type="text/css" />
-</head>
+  <body>
 
-<body>
+    <!-- Navbar Clever Techie Influence -->
 
-<!-- Navbar Clever Techie Influence -->
+    <nav>
+      <div class="navbar navbar-style navbar-expand-md fixed-top">
+        <button
+          class="btn-outline-light navbar-toggler"
+          data-toggle="collapse"
+          data-target="#collapse_target"
+          aria-controls="collapse_target"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"
+            ><i class="fa fa-globe" aria-hidden="true"></i
+          ></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapse_target">
+          <div class="navbar-logo">
+            <a class="navbar-brand" href="index.html">
+              <i class="fa fa-globe fa-2x" aria-hidden="true"></i>
+            </a>
+            <h2>
+              <span class="collapse navbar-text"
+                >Universal Relations Media</span
+              >
+            </h2>
+          </div>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="automation.html">Automation</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="globalisation.html">Globalisation</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <div class="small-nav-logo">
+          <h2>URM</h2>
+        </div>
+      </div>
+    </nav>
 
-	<nav>
-		<div class="navbar navbar-style navbar-expand-md fixed-top">
-			<button class="btn-outline-light navbar-toggler" data-toggle="collapse" data-target="#collapse_target"
-                aria-controls="collapse_target" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
-            </button>
-			<div class="collapse navbar-collapse" id="collapse_target">
-				<div class="navbar-logo">
-					<a class="navbar-brand" href="index.html">
-						<i class="fa fa-globe fa-2x" aria-hidden="true"></i>
-					</a>
-					<h2><span class="collapse navbar-text">Universal Relations Media</span></h2>
-				</div>
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link" href="index.html">Home</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="automation.html">Automation</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="globalisation.html">Globalisation</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="contact.html">Contact</a>
-					</li>
-				</ul>
-			</div>
-			<div class="small-nav-logo">
-				<h2>URM</h2>
-			</div>
-		</div>
-	</nav>
+    <article class="container-fluid mt-5">
+    
+      <!-- Callout -->
 
-<article class="container-fluid mt-5">
+      <div class="hmpg-head">
+        <div class="row">
+          <div class="col-12">
+            <section class="text-center">
+              <div class="overlay-hmpg">
+                <div class="d-none d-lg-block">
+                  <i class="fa fa-globe fa-2x" aria-hidden="true"></i>
+                  <h1>Universal Relations Media</h1>
+                  <i class="fa fa-globe fa-2x" aria-hidden="true"></i>
+                </div>
+                <div class="d-none d-sm-block d-lg-none">
+                  <span
+                    ><i class="fa fa-globe fa-2x" aria-hidden="true"></i
+                  ></span>
+                  <h2>URM</h2>
+                </div>
+                <div class="d-block d-sm-none">
+                  <span
+                    ><i class="fa fa-globe fa-2x" aria-hidden="true"></i
+                  ></span>
+                </div>
+                <hr />
+                <div class="d-block">
+                  <p>Because, <em>that's</em> not right...</p>
+                </div>
+              </div>
+            </section>
+          </div>
+        </div>
+      </div>
+      <hr />
 
-<!-- Callout -->
+      <!-- Blogs -->
 
-		<div class="hmpg-head">
-			<div class="row">
-				<div class="col-12">
-					<section class="text-center">
-						<div class="overlay-hmpg">
-							<div class="d-none d-lg-block">
-								<i class="fa fa-globe fa-2x" aria-hidden="true"></i> 
-                                <h1>Universal Relations Media</h1>
-								<i class="fa fa-globe fa-2x" aria-hidden="true"></i>
-							</div>
-							<div class="d-none d-sm-block d-lg-none">
-								<span><i class="fa fa-globe fa-2x" aria-hidden="true"></i></span><h2>URM</h2>
-								
-							</div>
-							<div class="d-block d-sm-none">
-								<span><i class="fa fa-globe fa-2x" aria-hidden="true"></i></span>
-							</div>
-							<hr>
-							<div class="d-block">
-								<p>Because, <em>that's</em> not right...</p>
-							</div>
-						</div>
-					</section>
-				</div>
-			</div>
-		</div>
-		<hr>
+      <section>
+        <div class="container-fluid btm-hmpg">
+          <div class="row text-center">
+            <div class="hmpg-text col-lg-4 col-md-6 col-sm-12">
+              <div class="card h-100 mb-3">
+                <img
+                  class="card-img-top"
+                  src="assets/images/robot.jpg"
+                  alt="Image with a illustrated brain split in two halves. The left half is cybernetic and the right half is organic"
+                />
+                <div class="card-body">
+                  <h2>Automation</h2>
+                  <p>
+                    A short essay written for the Open University's DD313
+                    International Relations Module.
+                  </p>
+                  <p>
+                    Reflects on the growth of Automation and the effect that
+                    this will have on the global labour force. Analysed through
+                    Securitization and Gendered-Lens theories.
+                  </p>
+                </div>
+                <a class="btn btn-warning" href="automation.html">Read Here!</a>
+              </div>
+            </div>
+            <br />
+            <div class="hmpg-text col-lg-4 col-md-6 col-sm-12">
+              <div class="card h-100 mb-3">
+                <img
+                  class="card-img-top"
+                  src="assets/images/earth.jpg"
+                  alt="An image of the earth and it's major cities joined by lights to convey increasing globalisation."
+                />
+                <div class="card-body">
+                  <h2>Globalization</h2>
+                  <p>
+                    A short essay written for the Open University's DD313
+                    International Relations Module.
+                  </p>
+                  <p>
+                    Reflects on the work of Michel Foucault's ideas towards
+                    governmentality and the theory of Liberal Institutionalism.
+                    Analysed through case studies towards protest.
+                  </p>
+                </div>
+                <a class="btn btn-warning" href="globalisation.html"
+                  >Read Here!</a
+                >
+              </div>
+            </div>
+            <br />
+            <div class="hmpg-text col-lg-4 d-md-none d-lg-block col-sm-12">
+              <div class="card h-100 mb-3">
+                <img
+                  class="card-img-top"
+                  src="assets/images/contact.jpg"
+                  alt="The author, looking smart in a suit."
+                />
+                <div class="card-body">
+                  <h2>Contact Me</h2>
+                  <p>
+                    An opportunity for people to contact the author through a
+                    number of mediums.
+                  </p>
+                  <p>
+                    Contact me if you wish to colloborate on a project. This
+                    could be relating to political theory or with web
+                    development. Or if you simply would like to enquire about
+                    the views expressed here.
+                  </p>
+                </div>
+                <a class="btn btn-warning" href="contact.html">Reach Me!</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <br />
 
-<!-- Blogs -->
+      <!-- Footer -->
 
-		<section>
-			<div class="container-fluid btm-hmpg">
-				<div class="row text-center">
-					<div class="hmpg-text col-lg-4 col-md-6 col-sm-12">
-						<div class="card h-100 mb-3">
-							<img class="card-img-top" src="assets/images/robot.jpg" alt="Image with a illustrated brain split in two halves. The left half is cybernetic and the right half is organic">
-							<div class="card-body">
-								<h2>Automation</h2>
-								<p>
-									A short essay written for the Open University's DD313 International Relations
-									Module.
-								</p>
-								<p>
-									Reflects on the growth of Automation and the effect that this will have on the
-									global labour force. Analysed through Securitization and Gendered-Lens theories.
-								</p>
-							</div>
-							<a class="btn btn-warning" href="automation.html">Read Here!</a>
-						</div>
-					</div>
-                    <br>
-					<div class="hmpg-text col-lg-4 col-md-6 col-sm-12">
-						<div class="card h-100 mb-3">
-							<img class="card-img-top" src="assets/images/earth.jpg" alt="An image of the earth and it's major cities joined by lights to convey increasing globalisation.">
-							<div class="card-body">
-								<h2>Globalization</h2>
-								<p>
-									A short essay written for the Open University's DD313 International Relations
-									Module.
-								</p>
-								<p>
-									Reflects on the work of Michel Foucault's ideas towards governmentality and the
-									theory of Liberal Institutionalism. Analysed through case studies towards protest.
-								</p>
-							</div>
-							<a class="btn btn-warning" href="globalisation.html">Read Here!</a>
-						</div>
-					</div>
-                    <br>
-					<div class="hmpg-text col-lg-4 d-md-none d-lg-block col-sm-12">
-						<div class="card h-100 mb-3">
-							<img class="card-img-top" src="assets/images/contact.jpg" alt="The author, looking smart in a suit.">
-							<div class="card-body">
-								<h2>Contact Me</h2>
-								<p>
-									An opportunity for people to contact the author through a number of mediums.
-								</p>
-								<p>
-									Contact me if you wish to colloborate on a project. This could be relating to
-									political theory or with web development.
-									Or if you simply would like to enquire about the views expressed here.
-								</p>
-							</div>
-							<a class="btn btn-warning" href="contact.html">Reach Me!</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<br>
+      <section class="container-fluid">
+        <footer class="mx-auto my auto text-center">
+          <div class="row footer-style">
+            <div class="footer-logo col-lg-4 d-none d-lg-block">
+              <h5>
+                <a href="index.html">
+                  <i class="fa fa-globe" aria-hidden="true"></i>
+                </a>
+                URM
+              </h5>
+            </div>
+            <div class="ftr-soc-lnk col-lg-4 col-md-6">
+              <div class="row">
+                <a class="col-4" href="https://www.youtube.com" target="_blank"
+                  ><i class="fa fa-youtube" aria-hidden="true"></i
+                ></a>
+                <a class="col-4" href="https://www.facebook.com" target="_blank"
+                  ><i class="fa fa-facebook-official" aria-hidden="true"></i
+                ></a>
+                <a class="col-4" href="https://www.linkedin.com" target="_blank"
+                  ><i class="fa fa-linkedin-square" aria-hidden="true"></i
+                ></a>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <p>
+                Copyright 2020<br />
+                Universal Relations Media
+              </p>
+            </div>
+          </div>
+        </footer>
+      </section>
+    </article>
 
-<!-- Footer -->
+    <!-- Java -->
 
-		<section class="container-fluid">
-			<footer class="mx-auto my auto text-center">
-				<div class="row footer-style">
-					<div class="footer-logo col-lg-4 d-none d-lg-block">
-						<h5><a href="index.html">
-								<i class="fa fa-globe" aria-hidden="true"></i>
-							</a>
-							URM</h5>
-					</div>
-					<div class="ftr-soc-lnk col-lg-4 col-md-6">
-						<div class="row">
-							<a class="col-4" href="https://www.youtube.com"
-								target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a>
-							<a class="col-4" href="https://www.facebook.com"
-								target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-							<a class="col-4" href="https://www.linkedin.com"
-								target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-6">
-						<p>Copyright 2020<br>
-                        Universal Relations Media
-                        </p>
-					</div>
-				</div>
-			</footer>
-		</section>
-	</article>
-
-<!-- Java -->
-
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-	</script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-		integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous">
-	</script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-		integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous">
-	</script>
-</body>
-
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+      integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+      integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
