--- a/index.html
+++ b/index.html
@@ -84,16 +84,16 @@
     
       <!-- Callout -->
 
-      <div class="hmpg-head">
+      <div class="hmpg-head overlay-hmpg">
         <div class="row">
           <div class="col-12">
+          <div class="d-none d-lg-block text-center">
+                <i class="fa fa-globe fa-2x" aria-hidden="true"></i>
+                <h1>Universal Relations Media</h1>
+                <i class="fa fa-globe fa-2x" aria-hidden="true"></i>
+            </div>
             <section class="text-center">
-              <div class="overlay-hmpg">
-                <div class="d-none d-lg-block">
-                  <i class="fa fa-globe fa-2x" aria-hidden="true"></i>
-                  <h1>Universal Relations Media</h1>
-                  <i class="fa fa-globe fa-2x" aria-hidden="true"></i>
-                </div>
+              <div>
                 <div class="d-none d-sm-block d-lg-none">
                   <span
                     ><i class="fa fa-globe fa-2x" aria-hidden="true"></i
